add support for java8