@@ -11,6 +11,7 @@ import org.bukkit.plugin.java.JavaPlugin;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
 
@@ -47,7 +48,7 @@ public class ContextManager implements Listener {
         if (registeredContexts == null) {
             return Collections.emptySet();
         }
-        return Set.copyOf(registeredContexts.values());
+        return Collections.unmodifiableSet(new HashSet<>(registeredContexts.values()));
     }
 
     /**
